# mdk-android

./: .gitignore  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/mediadevkit/mdkplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MDKPlayerJNI.cpp
app/src/main/java/com/mediadevkit/mdkplayer/: MDKPlayer.java  MainActivity.java  MainActivity.kt  PlayerScreen.kt  RootScreen.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mediadevkit/mdkplayer/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle  build.gradle.kts
sdk/src/androidTest/java/com/mediadevkit/sdk/: ExampleInstrumentedTest.java
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt  MDKPlayerJNI.cpp
sdk/src/main/java/com/mediadevkit/sdk/: KotlinPlayer.kt  LibMdk.kt  MDKPlayer.java  MediaInfo.kt  MediaStatus.kt  MediaType.kt
sdk/src/test/java/com/mediadevkit/sdk/: ExampleUnitTest.java
